[project]
name = "geo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipdb>=0.13.13",
    "matplotlib>=3.10.7",
    "osmium>=4.2.0",
    "pandana>=0.7",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]
